Addons/IstioNetworking/mtls-prometheus-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: prometheus-permissive
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  portLevelMtls:
    9090:
      mode: PERMISSIVE
