Addons/IstioNetworking/virtualservice-grafana.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/market-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: prometheus-grafana.monitoring.svc.cluster.local
            port:
              number: 80
