Addons/IstioNetworking/virtualservice-user-api-gateway.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: user-api-gateway
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/market-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: user-api-gateway.default.svc.cluster.local
            port:
              number: 8080
